--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -84,6 +84,8 @@ jobs:
     path: testdata
 
   - script: |
+      python -m pip install  --upgrade pip
+      python -m pip install  cython
       certutil -urlcache -split -f https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-win.zip ninja-win.zip
       powershell -command "Expand-Archive -Force ninja-win.zip"
       git clone https://github.com/google/gtest-parallel.git
@@ -92,7 +94,7 @@ jobs:
 
   - script: |
       set PATH=$(WORK_DIR)\ninja-win;%PATH%
-      call "$(MSVS_VARS_PATH)" && cmake -GNinja -DENABLE_FASTER_BUILD=ON -DENABLE_TEMPLATE_PLUGIN=ON -DCMAKE_BUILD_TYPE=$(BUILD_TYPE) -DENABLE_TESTS=ON -DENABLE_STRICT_DEPENDENCIES=OFF -DIE_EXTRA_MODULES=$(OPENVINO_CONTRIB_REPO_DIR)\modules -DCMAKE_C_COMPILER:PATH="$(MSVC_COMPILER_PATH)" -DCMAKE_CXX_COMPILER:PATH="$(MSVC_COMPILER_PATH)" $(REPO_DIR)
+      call "$(MSVS_VARS_PATH)" && cmake -GNinja -DENABLE_FASTER_BUILD=ON -DENABLE_TEMPLATE_PLUGIN=ON -DCMAKE_BUILD_TYPE=$(BUILD_TYPE) -DENABLE_PYTHON=ON -DPYTHON_EXECUTABLE="C:\hostedtoolcache\windows\Python\3.7.6\x64\python.exe" -DPYTHON_INCLUDE_DIR="C:\hostedtoolcache\windows\Python\3.7.6\x64\include" -DPYTHON_LIBRARY="C:\hostedtoolcache\windows\Python\3.7.6\x64\libs\python37.lib" -DENABLE_TESTS=ON -DIE_EXTRA_MODULES=$(OPENVINO_CONTRIB_REPO_DIR)\modules -DCMAKE_C_COMPILER:PATH="$(MSVC_COMPILER_PATH)" -DCMAKE_CXX_COMPILER:PATH="$(MSVC_COMPILER_PATH)" $(REPO_DIR)
     workingDirectory: $(BUILD_DIR)
     displayName: 'CMake'
 
@@ -127,7 +129,24 @@ jobs:
     continueOnError: false
 
   - script: |
-      set PATH=$(TEST_ENV_PATH)
+      powershell -command "Invoke-WebRequest  -Uri  https://d30ikxcvcet9xo.cloudfront.net/repositories/openvino/ci_dependencies/test/samples_smoke_tests_data.zip -OutFile  $(REPO_DIR)\tests\samples_smoke_tests\samples_smoke_tests_data.zip"
+      powershell -command "Expand-Archive -Force -Path $(REPO_DIR)\tests\samples_smoke_tests\samples_smoke_tests_data.zip $(REPO_DIR)\tests\samples_smoke_tests"
+      python -m pip install  --upgrade pip
+      python -m pip install -r $(REPO_DIR)\tests\samples_smoke_tests\requirements.txt
+      set IE_APP_PATH=$(BIN_DIR)
+      set IE_APP_PYTHON_PATH=$(REPO_DIR)\inference-engine\ie_bridges\python\sample\
+      set PYTHONPATH=$(REPO_DIR)\model-optimizer\;$(REPO_DIR)\tests\samples_smoke_tests\;$(BIN_DIR)\$(BUILD_TYPE)\python_api\python3.7\;$(REPO_DIR)\ngraph\python\src\
+      set PATH=$(REPO_DIR)\inference-engine\temp\tbb\bin;$(REPO_DIR)\inference-engine\temp\opencv_4.5.1\opencv\bin;$(BIN_DIR);$(BIN_DIR)\$(BUILD_TYPE);$(REPO_DIR)\inference-engine\temp\gna_02.00.00.1047.1\win64\x64;%PATH%
+      set SHARE=$(REPO_DIR)\tests\samples_smoke_tests\samples_smoke_tests_data\
+      set WORKSPACE=$(REPO_DIR)
+      set IE_APP_PYTHON_TOOL_PATH=$(REPO_DIR)\inference-engine\tools\
+      python -m pytest $(REPO_DIR)\tests\samples_smoke_tests\  --env_conf $(REPO_DIR)\tests\samples_smoke_tests\env_config.yml -s --junitxml=TEST-SamplesSmokeTests.xml
+    workingDirectory: $(REPO_DIR)
+    displayName: 'SamplesSmokeTests'
+    continueOnError: false
+
+  - script: |
+      set PATH=$(REPO_DIR)\inference-engine\temp\tbb\bin;%PATH%
       "$(IB_TESTCONSOLE)" $(BIN_DIR)\InferenceEngineUnitTests.exe --gtest_output=xml:TEST-InferenceEngineUnitTests-IB.xml
     displayName: 'IE UT old - IB'
 
