--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -188,7 +188,7 @@ jobs:
     continueOnError: false
 
   - script: |
-      wget -P tests/samples_smoke_tests/ https://d30ikxcvcet9xo.cloudfront.net/repositories/openvino/ci_dependencies/test/samples_smoke_tests_data.zip     
+      wget -P tests/samples_smoke_tests/ https://storage.openvinotoolkit.org/repositories/openvino/ci_dependencies/test/samples_smoke_tests_data.zip     
       python3 -m pip install  --upgrade pip
       sudo apt-get install -y python3-pytest python3-setuptools
       python3 -m pip install -r $(REPO_DIR)/tests/samples_smoke_tests/requirements.txt
