--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -86,7 +86,7 @@ jobs:
 
   - script: |
       python -m pip install  --upgrade pip
-      python -m pip install -r  $(REPO_DIR)\inference-engine\ie_bridges\python\requirements.txt
+      python -m pip install -r  $(REPO_DIR)\inference-engine\ie_bridges\python\src\requirements-dev.txt
       certutil -urlcache -split -f https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-win.zip ninja-win.zip
       powershell -command "Expand-Archive -Force ninja-win.zip"
       git clone https://github.com/google/gtest-parallel.git
@@ -136,14 +136,15 @@ jobs:
       python -m pip install -r $(REPO_DIR)\tests\samples_smoke_tests\requirements.txt
       set IE_APP_PATH=$(BIN_DIR)
       set IE_APP_PYTHON_PATH=$(REPO_DIR)\inference-engine\ie_bridges\python\sample\
-      set PYTHONPATH=$(REPO_DIR)\model-optimizer\;$(REPO_DIR)\tests\samples_smoke_tests\;$(BIN_DIR)\$(BUILD_TYPE)\python_api\python3.7\;$(REPO_DIR)\ngraph\python\src\
-      set PATH=$(REPO_DIR)\inference-engine\temp\tbb\bin;$(REPO_DIR)\inference-engine\temp\opencv_4.5.1\opencv\bin;$(BIN_DIR);$(BIN_DIR)\$(BUILD_TYPE);$(REPO_DIR)\inference-engine\temp\gna_02.00.00.1047.1\win64\x64;%PATH%
+      set PYTHONPATH=$(REPO_DIR)\tests\samples_smoke_tests\;$(BIN_DIR)\$(BUILD_TYPE)\python_api\python3.7\;$(REPO_DIR)\ngraph\python\src\
+      set PATH=$(REPO_DIR)\inference-engine\temp\tbb\bin;$(REPO_DIR)\inference-engine\temp\opencv_4.5.2\opencv\bin;$(BIN_DIR);$(BIN_DIR)\$(BUILD_TYPE);$(REPO_DIR)\inference-engine\temp\gna_02.00.00.1226\win64\x64;%PATH%
       set SHARE=$(REPO_DIR)\tests\samples_smoke_tests\samples_smoke_tests_data\
       set WORKSPACE=$(REPO_DIR)
       set IE_APP_PYTHON_TOOL_PATH=$(REPO_DIR)\inference-engine\tools\
+
       python -m pytest $(REPO_DIR)\tests\samples_smoke_tests\  --env_conf $(REPO_DIR)\tests\samples_smoke_tests\env_config.yml -s --junitxml=TEST-SamplesSmokeTests.xml
     workingDirectory: $(REPO_DIR)
-    displayName: 'SamplesSmokeTests'
+    displayName: 'Samples Smoke Tests'
     continueOnError: false
 
   - script: |
